<resources>
	<string name="sendSuggestion_app_name">KosMembers</string>
	<string name="sendSuggestionNameEdit">Имя и фамилия</string>
	<string name="sendSuggestionBookEdit">Название документа</string>
	<string name="sendSuggestionSendBtn">Отправить предложение</string>
	<string name="sendSuggestionCommentEdit">Комментарий</string>
	<string name="sendSuggestionFormTitle">Предложите документ, который вы хотите видеть в программе</string>
	<string name="sendSuggestionSuccess">"Ваше предложение принято"</string>
	<string name="sendSuggestionFailure">"Произошла ошибка при отправке данных"</string>
	<string name="sendSuggestionOptional">необязательно</string>
	<string name="sendSuggestionBookHelper">Федеральный закон и т.п. (с номером и датой публикации")</string>
</resources>
