<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<ScrollView
		android:id="@+id/inputScroll"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"

		>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:context=".MainActivity"
			android:paddingTop="12dp"
			android:paddingBottom="96dp"
			>

			<Button
				android:id="@+id/btnDone"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="48dp"
				android:text="@string/sendSuggestionSendBtn"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

			<TextView
				android:id="@+id/topLabel"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:enabled="false"
				android:padding="24dp"
				android:text="@string/sendSuggestionFormTitle"
				android:textSize="24sp"
				android:textColor="@color/material_on_surface_emphasis_medium"
				app:layout_constraintWidth_max="360dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />


			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textInputLayout"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="18dp"
				android:layout_marginLeft="12dp"
				android:layout_marginRight="12dp"
				android:layout_marginBottom="18dp"

				app:helperText="@string/sendSuggestionOptional"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/topLabel">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/nameEdit"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/sendSuggestionNameEdit"
					android:imeOptions="actionNext|flagNoFullscreen"
					android:inputType="text"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textInputLayout2"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="18dp"
				android:layout_marginLeft="12dp"
				android:layout_marginRight="12dp"
				android:layout_marginBottom="18dp"

				app:helperText="@string/sendSuggestionBookHelper"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/bookEdit"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/sendSuggestionBookEdit"
					android:imeOptions="actionNext|flagNoFullscreen"
					android:inputType="text"/>
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/textInputLayout4"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="18dp"
				android:layout_marginLeft="12dp"
				android:layout_marginRight="12dp"
				android:layout_marginBottom="18dp"

				app:helperText="@string/sendSuggestionOptional"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/commentEdit"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/sendSuggestionCommentEdit"
					android:imeOptions="actionDone|flagNoFullscreen"
					android:inputType="text" />
			</com.google.android.material.textfield.TextInputLayout>


		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>